# a-wasm-test

./: .gitignore  README.md  index.html  package-lock.json  package.json
CPP-WASM/: CMakeLists.txt  Main.cpp
Golang-WASM/: main.go
public/cocos3D/: application.42eaf.js  application.ad8c3.js  index.63c3a.js  index.c107d.js  index.html
public/cocos3D/assets/internal/: config.f35d6.json
public/cocos3D/assets/main/: config.16199.json  config.17645.json  index.16199.js  index.17645.js
public/cocos3D/assets/main/import/09/: 09937a771.a66d5.json
public/cocos3D/assets/main/import/0b/: 0b01a6320.4d12b.json  0bee1d389.9bb0e.json
public/cocos3D/assets/main/import/b5/: b5b27ab1-e740-4398-b407-848fc2b2c897@6c48a.d2fc9.json
public/cocos3D/cocos-js/: bullet.cocos-01de3b37.js  bullet.wasm-4b39e643.js  instantiated-2a7d7e44.js  wait-for-ammo-instantiation.03633.js
public/cocos3D/src/: import-map.5a666.json  settings.28903.json  settings.e31bc.json
public/wasm/: EyerWasm.js  EyerWasm.wasm  EyerWasm.worker.js  main.wasm  tiny_main.wasm
src/: App.vue  main.ts  style.css
src/assets/js/: instantiateWasm.ts
src/components/: Canvas2D.vue  PlayOption.vue  Rundetail.vue  VideoPreview.vue  WebGLCanvas.vue  temp.vue
src/components/store/: index.ts
src/components/wasmdraw/: cppDraw.ts  golangDraw.ts
src/components/webgl/: webgl.ts
src/utils/: webgl.ts  windowEvent.ts
